--- a/src/Mouse.css
+++ b/src/Mouse.css
@@ -1,4 +1,21 @@
 .Mouse {
     display: flex;
+    flex-direction: row;
     justify-content: center;
+    background-color: rgba(30, 84, 84, 0.445);
+    margin-top: 3%;
+    margin-bottom: 3%;
+    margin-left: 20%;
+    margin-right: 20%;
+}
+
+#but {
+    margin-left: 20%;
+    margin-top: 5%;
+}
+
+.MouseImage {
+    margin-top: 1%;
+    margin-right: 10%;
+
 }
