--- a/src/Mouse.css
+++ b/src/Mouse.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    background-color: rgba(30, 84, 84, 0.445);
+    background-color: rgb(225, 233, 122);
     margin-top: 3%;
     margin-bottom: 3%;
     margin-left: 20%;
